# gdps-server

./: .env.example  .gitignore  Cargo.toml  config.example.toml  diesel.toml  readme.md
migrations/: 20231018025924_accounts.up.sql  20231018030352_users.up.sql  20231018030720_levels.up.sql
migrations/2023-08-26-071607_accounts/: down.sql  up.sql
migrations/2023-08-27-090522_users/: up.sql
migrations/2023-09-03-032651_levels/: up.sql
public/: style.css
src/: config.rs  db.rs  endpoints.rs  helpers.rs  main.rs  template_endpoints.rs
src/db/: models.rs  schema.rs
src/endpoints/: accounts.rs  levels.rs
src/endpoints/accounts/: login_account.rs  register_account.rs  update_account_settings.rs
src/endpoints/levels/: download_level.rs  get_levels.rs  upload_level.rs
src/endpoints/users/: get_users.rs
src/helpers/: accounts.rs  clean.rs  difficulty.rs  encryption.rs  format.rs  gjp2.rs  levels.rs  reupload.rs  templates.rs
src/template_endpoints/: account_management.rs  index.rs  login.rs  logout.rs  reupload.rs
templates/: account_header.html.hbs  account_management.html.hbs  index.html.hbs  login.html.hbs  reupload.html.hbs
