[package]
name = "gdps-server"
version = "0.0.0"
edition = "2021"

[dependencies]
base64 = "0.21.3"
diesel = { version = "=2.1.0", features = ["postgres", "64-column-tables"] }
dotenvy = "0.15.7"
flate2 = "1.0.27"
maplit = "1.0.2"
password-auth = "0.3.0"
rand = "0.8.5"
regex = "1.9.4"
rocket = "=0.5.0-rc.3"
rocket_dyn_templates = { version = "0.1.0-rc.3", features = ["handlebars"] }
serde = { version = "1.0.188", features = ["derive"] }
sha = "1.0.3"
toml = "0.7.6"
