[package]
name = "gdps-server"
version = "0.0.0"
edition = "2021"

[dependencies]
base64 = "0.21.3"
dotenvy = "0.15.7"
flate2 = "1.0.27"
maplit = "1.0.2"
migrate = "0.2.0"
password-auth = "0.3.0"
rand = "0.8.5"
regex = "1.9.4"
reqwest = "0.11.20"
rocket = { version = "=0.5.0-rc.3", features = ["secrets"]}
rocket_dyn_templates = { version = "0.1.0-rc.3", features = ["handlebars"] }
roxmltree = "0.18.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
sha = "1.0.3"
sqlx = { version = "0.7.2", features = ["runtime-tokio", "sqlite"] }
toml = "0.7.6"
